--- a/experience.html
+++ b/experience.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/experience.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-    <h1 class="text-brown bg-black text-center shadow-button font-semibol text-custom-md font-outfit">Meet top coder
-        ready to
-        Chat and hire</h1>
+    <h1 class="text-purple text-xl bg-black text-center shadow-button">hello world</h1>
     <script src="./tailwind.config.js"></script>
 </body>
 
