modified chat section

--- a/experience.html
+++ b/experience.html
@@ -288,7 +288,7 @@
                                     Developer</p>
                             </div>
                         </div>
-                        <div class="flex items-center pt-1 pb-0.5">
+                        <div class="flex items-center justify-between pt-1 pb-0.5">
                             <span>
                                 <svg width="75" height="13" viewBox="0 0 75 13" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -312,6 +312,14 @@
                             </span>
                             <p class="text-green">Experience: 10 Years</p>
                         </div>
+                        <p class="text-sm font-normal font-inter text-black opacity-70 max-w-[436px] leading-150">
+                            “Senectus tempus
+                            porttitor sed
+                            id dignissim. At et
+                            euismod
+                            adipiscing mattis
+                            vestibulum odio.
+                            Curabitur consectetur commodo neque nullam aenean molestie tristique.</p>
                     </div>
                 </div>
             </div>
